tests/testcase/errors/type_mismatch.ob
fun main() do
  let x = 5;
  let y = "hello";
  return x + y;
end